-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.12.0, Lustre 2.13.0
-
None
-
3
-
9223372036854775807
lfsck_namespace_assistant_handler_p1() will LBUG() if file FID is zero, and file name is not "..", instead it should treat such file as bad dirent and remove it.
And grep shows only this place in lfsck code LBUG() on disk data.
- is duplicated by
-
LU-14106 lfsck shouldn't LBUG() on disk data
-
- Resolved
-